feat: Implement initial parent/child authentication, identity management, core UI, and i18n.